Adicionando conteudo ao objeto

--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body> 
-    
+    <style>
+        .objeto{
+            margin: 0 auto;
+            width: 1200px;
+            height: 600px;
+            background-color: rgb(27, 126, 121);
+        }
+        .esquerda{
+            position: absolute;
+            width: 50%;
+            height: 50%;
+            margin-top: 12.5%;
+            border-radius: 50%;
+            background-color: rgb(206, 173, 113);
+        }
+    </style>
+
+    <div class="objeto">   
+        <div class="esquerda">
+        </div>
+    </div>
 </body>
 </html>
