adicionando objeto a direita

--- a/teste.html
+++ b/teste.html
@@ -22,10 +22,20 @@
             border-radius: 50%;
             background-color: rgb(206, 173, 113);
         }
+        .direita{
+            width: 50%;
+            height: 50%;
+            margin-top: 12.5%;
+            float: right;
+            border-radius: 50%;
+            background-color: rgb(53, 231, 130);
+        }
     </style>
 
     <div class="objeto">   
         <div class="esquerda">
+        </div>
+        <div class="direita">
         </div>
     </div>
 </body>
